<resources>
    <string name="app_name">DomusViewer</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="on_off_switch">Switch</string>
    <string name="lamp">lamp</string>
    <string name="title_activity_setting">settingActivity</string>
    <string name="pref_default_display_name">192.168.1.121:8080</string>
    <string name="server_address">Server Address</string>
    <string name="server_address_key">DomusEngineAddress</string>
    <string name="name">name</string>
    <string name="model">model</string>
    <string name="date">date</string>
    <string name="location">location</string>
    <string name="environment">environment</string>
    <string name="enabled">enabled</string>
    <string name="apply">apply</string>
    <string name="already_assigned">There is another sensor assigned to this room. Do you want change the assignment ?</string>
    <string name="change_assignment">Change assignment</string>
    <string name="leave_assignment">Leave previous assignment</string>
    <string name="quality">Quality</string>
    <string name="rxQuality">RX Quality</string>
    <string name="tx_quality">TX Quality</string>
    <string name="not_available">Not Available</string>
</resources>
